<resources>
    <string name="app_name">Qr share</string>
    <string name="generate">Generate</string>
    <string name="scan">Scan</string>
    <string name="contact_details">Contact details</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="no_value_toast">Please Fill in your details</string>
    <string name="add_to_contact">Add to contact</string>

</resources>